--- a/app/src/main/res/layout/customer_topbarlayout.xml
+++ b/app/src/main/res/layout/customer_topbarlayout.xml
@@ -53,7 +53,7 @@
             app:layout_constraintVertical_bias="0.5">
 
             <ImageView
-                android:id="@+id/profileicon"
+                android:id="@+id/cust_profileicon"
                 android:layout_width="30dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_userinfo" />
