--- a/app/src/main/res/layout/activity_customer_registration.xml
+++ b/app/src/main/res/layout/activity_customer_registration.xml
@@ -45,7 +45,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_margin="@dimen/sd6"
-android:visibility="gone"
+android:visibility="visible"
         app:cardCornerRadius="@dimen/sd18"
         android:backgroundTint="@color/midgreen"
         >
