--- a/app/src/main/res/layout/adaptersellerdesign.xml
+++ b/app/src/main/res/layout/adaptersellerdesign.xml
@@ -11,8 +11,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:padding="@dimen/sd10"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/sd10">
 
         <LinearLayout
             android:id="@+id/linearLayout4"
@@ -20,8 +20,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/sd10"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5">
 
             <TextView
                 android:layout_width="wrap_content"
