--- a/app/src/main/res/layout/fragment_distributor_home.xml
+++ b/app/src/main/res/layout/fragment_distributor_home.xml
@@ -14,7 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
+            <include
+                android:id="@+id/headerdistributor"
+                layout="@layout/headerdistributor" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
