--- a/app/src/main/res/layout/fragment_cust_performance_frag.xml
+++ b/app/src/main/res/layout/fragment_cust_performance_frag.xml
@@ -1,14 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginVertical="@dimen/sd4"
+    android:orientation="vertical"
     tools:context=".customers.fragments.Cust_performance_frag">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sales Data/Profit"
+        android:padding="@dimen/sd10"
+        android:background="@color/midgreen"
+        android:fontFamily="@font/bangers"
+        android:textSize="@dimen/sd16"
+        android:textColor="@color/darkgreen"
+        android:textStyle="bold"
+        />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_margin="@dimen/sd6"
+        android:layout_weight="1"
+        android:backgroundTint="@color/midgreen"
+        android:visibility="visible"
+        app:cardCornerRadius="@dimen/sd18">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >        <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="15/05/23 - 21/05/23"
+    android:drawableEnd="@drawable/ic_baseline_filter_list_16"
+    android:textStyle="bold"
+    android:textColor="@color/darkgreen"
+    android:gravity="right"
+    android:textSize="@dimen/sd14"
+    android:padding="@dimen/sd8"
+    />
 
-</FrameLayout>
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/cust_chart"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                 />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Total Profit : 210000"
+            android:textStyle="bold"
+            android:textColor="@color/darkgreen"
+            android:gravity="right"
+            android:textSize="@dimen/sd14"
+            android:padding="@dimen/sd8"
+            />
+
+</LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Payment"
+        android:background="@color/midgreen"
+        android:layout_marginVertical="@dimen/sd4"
+        android:textColor="@color/darkgreen"
+        android:textSize="@dimen/sd14"
+        android:textStyle="bold"
+        android:padding="@dimen/sd8"
+        />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/sd14"
+        android:layout_marginBottom="@dimen/sd6"
+        android:backgroundTint="@color/midgreen"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pending Payment"
+                android:textSize="@dimen/sd14"
+                android:textColor="@color/darkgreen"
+                android:textStyle="bold"
+                />
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rs. 2100" android:layout_margin="@dimen/sd10"
+                android:textSize="@dimen/sd16"
+                android:textColor="@color/darkgreen"
+                android:textStyle="bold"
+                />
+
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Payment Due Date"
+                android:textSize="@dimen/sd14"
+                android:textColor="@color/darkgreen"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="21/07/2023"
+                android:layout_marginHorizontal="@dimen/sd10"
+                android:textSize="@dimen/sd16"
+                android:textColor="@color/darkgreen"
+                android:textStyle="bold"
+                />
+        </LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/darkgreen"
+                android:text="Pay Now"
+                />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+
+</LinearLayout>
