--- a/app/src/main/res/layout/fragment_customer_home.xml
+++ b/app/src/main/res/layout/fragment_customer_home.xml
@@ -20,6 +20,25 @@
             >
 
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="15dp"
+                android:layout_marginVertical="@dimen/sd6"
+                android:layout_marginHorizontal="@dimen/sd10"
+                android:backgroundTint="@color/midgreen"
+                >
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/sd8"
+                    android:hint="search Items"
+                    android:background="@null"
+                    android:textColor="@color/darkgreen"
+                    android:drawableEnd="@drawable/ic_searchglossy"
+                    />
+
+            </androidx.cardview.widget.CardView>
             <include
                 layout="@layout/cust_trendingsection"
                 />
