--- a/app/src/main/res/layout/customer_sellhistory_layout.xml
+++ b/app/src/main/res/layout/customer_sellhistory_layout.xml
@@ -3,16 +3,29 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+
+        >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="Item Sold History"
+        android:layout_weight="1"
         android:background="@color/midgreen"
+        android:gravity="center"
         android:textSize="@dimen/sd14"
         android:textColor="@color/darkgreen"
-        android:padding="@dimen/sd10"
+        android:paddingHorizontal="@dimen/sd10"
+        android:paddingTop="@dimen/sd4"
         android:textStyle="bold"
         />
+    <include
+        layout="@layout/datefilter_layout"
+        />
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
