--- a/app/src/main/res/layout/customer_topbarlayout.xml
+++ b/app/src/main/res/layout/customer_topbarlayout.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="5dp"
+    android:paddingHorizontal="5dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
