--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,6 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/sd4"
+                    android:inputType="textEmailAddress"
                     android:background="@drawable/loginedittextbg"
                     android:drawableEnd="@drawable/ic_mail"
                     android:hint="abc@gmail.com"
@@ -150,6 +151,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/sd4"
                     android:imeOptions="actionDone"
+                    android:maxLines="1"
+                    android:inputType="textPassword"
                     android:background="@drawable/loginedittextbg"
                     android:drawableEnd="@drawable/ic_padlock"
                     android:hint="***********"
