--- a/app/src/main/res/layout/fragment_distributor_home.xml
+++ b/app/src/main/res/layout/fragment_distributor_home.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    android:layout_height="match_parent"
+    tools:context=".distributors.fragments.DistributorHomeFrag">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
-    tools:context=".distributors.fragments.DistributorHomeFrag">
+    >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,12 +31,23 @@
                 android:padding="@dimen/sd6"
                 />
             <include layout="@layout/distributorchart" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
+                <include layout="@layout/midsectiondistributordashboard" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <include layout="@layout/distributorsectiontwo"
                 android:id="@+id/addSellers"/>
+            </LinearLayout>
 
             <include layout="@layout/distributorsectionthree"
                 android:id="@+id/itemRequest"/>
         </LinearLayout>
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
