--- a/app/src/main/res/layout/adaptersecondbottomsection.xml
+++ b/app/src/main/res/layout/adaptersecondbottomsection.xml
@@ -16,7 +16,7 @@
             android:layout_width="100dp"
             android:layout_height="90dp"
             android:layout_marginBottom="7dp"
-            android:src="@drawable/ic_natureproduct"
+            android:src="@drawable/ic_userm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +35,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Item Name"
+                android:text="Customer Name"
                 android:textColor="@color/darkgreen"
                 android:textSize="@dimen/sd14"
                 android:textStyle="bold" />
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
-                android:text="Item Description"
+                android:text="Added by Salesman1"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sd10" />
 
