--- a/app/src/main/res/layout/distributor_more_header.xml
+++ b/app/src/main/res/layout/distributor_more_header.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sd8"
-            android:id="@+id/pendingOrderCard"
+            android:id="@+id/distributor_pendingOrderCard"
             app:cardCornerRadius="@dimen/sd16"
             android:backgroundTint="@color/midgreen"
             >
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sd8"
             app:cardCornerRadius="@dimen/sd16"
-            android:id="@+id/pendingPaymentCard"
+            android:id="@+id/distributor_pendingPaymentCard"
             android:backgroundTint="@color/midgreen"
             >
             <LinearLayout
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sd8"
             app:cardCornerRadius="@dimen/sd16"
-            android:id="@+id/returnOrderCard"
+            android:id="@+id/distributor_returnOrderCard"
             android:backgroundTint="@color/midgreen"
             >
             <LinearLayout
@@ -126,6 +126,86 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/sd2"
                     android:text="Return Orders"
+                    android:textStyle="bold"
+                    android:textColor="@color/darkgreen"
+                    />
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="100dp"
+                    android:backgroundTint="@color/white"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="8"
+                        android:padding="@dimen/sd8"
+                        android:textColor="@color/darkgreen"
+                        android:textStyle="bold"
+                        />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/sd8"
+            app:cardCornerRadius="@dimen/sd16"
+            android:id="@+id/distributor_totalProfitCard"
+            android:backgroundTint="@color/midgreen"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:padding="@dimen/sd8"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/sd2"
+                    android:text="Total Profit"
+                    android:textStyle="bold"
+                    android:textColor="@color/darkgreen"
+                    />
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="100dp"
+                    android:backgroundTint="@color/white"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="5%"
+                        android:padding="@dimen/sd8"
+                        android:textColor="@color/darkgreen"
+                        android:textStyle="bold"
+                        />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/sd8"
+            app:cardCornerRadius="@dimen/sd16"
+            android:id="@+id/distributor_myOrderCard"
+            android:backgroundTint="@color/midgreen"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:padding="@dimen/sd8"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/sd2"
+                    android:text="My Orders"
                     android:textStyle="bold"
                     android:textColor="@color/darkgreen"
                     />
