--- a/app/src/main/res/layout/distributorchart.xml
+++ b/app/src/main/res/layout/distributorchart.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/sd6"
+    android:layout_margin="@dimen/sd4"
     android:backgroundTint="@color/lightgreen"
     >
 <LinearLayout
@@ -141,4 +141,4 @@
     </LinearLayout>
 </LinearLayout>
 </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
