--- a/app/src/main/res/layout/distributorchart.xml
+++ b/app/src/main/res/layout/distributorchart.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_margin="@dimen/sd4"
     android:backgroundTint="@color/lightgreen"
     >
+
 <LinearLayout
     android:layout_width="match_parent"
     android:gravity="center"
