--- a/app/src/main/res/layout/activity_distributor_dashboard.xml
+++ b/app/src/main/res/layout/activity_distributor_dashboard.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:menu="@menu/salesmanmenu" />
+                app:menu="@menu/distributormenu" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </RelativeLayout>
 </ScrollView>
