--- a/app/src/main/res/layout/fragment_add_salesman.xml
+++ b/app/src/main/res/layout/fragment_add_salesman.xml
@@ -15,6 +15,7 @@
         android:id="@+id/distributor_linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/distributorFormSubmit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +25,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -132,7 +133,17 @@
                     android:imeOptions="actionDone"
                     android:padding="@dimen/sd8"
                     android:autofillHints="emailAddress" />
-
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginVertical="5dp"
+                    android:background="@drawable/loginedittextbg"
+                    android:hint="pan - no"
+                    android:inputType="textEmailAddress"
+                    android:imeOptions="actionDone"
+                    android:padding="@dimen/sd8"
+                    android:autofillHints="emailAddress" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
