--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -22,7 +22,7 @@ android:orientation="vertical"
     >
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="200dp"
         android:src="@drawable/ae_bird"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,8 +38,9 @@ android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ae "
+        android:fontFamily="@font/lemon"
         android:textColor="@color/birdcolor"
-        android:textSize="@dimen/sd34"
+        android:textSize="@dimen/sd32"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/iv_logo" />
@@ -50,6 +51,7 @@ android:orientation="vertical"
         android:layout_height="wrap_content"
         android:text="naturals"
         android:textColor="@color/birdcolor"
+        android:fontFamily="@font/lemon"
         android:textSize="@dimen/sd30"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
