--- a/app/src/main/res/layout/distributor_more_header.xml
+++ b/app/src/main/res/layout/distributor_more_header.xml
@@ -198,6 +198,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:id="@+id/distributor_myOrder_button"
                 android:gravity="center"
                 android:padding="@dimen/sd8"
                 >
