--- a/app/src/main/res/layout/fragment_add_salesman.xml
+++ b/app/src/main/res/layout/fragment_add_salesman.xml
@@ -259,7 +259,8 @@
         android:layout_marginBottom="4dp"
         android:backgroundTint="@color/midgreen"
         app:cardCornerRadius="@dimen/sd20"
-        android:layout_margin="@dimen/sd4"
+        android:layout_marginVertical="@dimen/sd6"
+        android:layout_marginHorizontal="@dimen/sd10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
